--- a/templates/paginaDocente/editar-curso.html
+++ b/templates/paginaDocente/editar-curso.html
@@ -12,6 +12,7 @@
                     <div class="col-lg-12">
                         <h1 class="page-header">
                             Editar <small> Curso </small>
+                            <a id="regresar" href="javascript:history.back()" class="btn btn-primary pull-right">Back</a>
                         </h1>
                         <ol class="breadcrumb">
                             <li>
