--- a/templates/paginaDocente/eliminar-estudiante.html
+++ b/templates/paginaDocente/eliminar-estudiante.html
@@ -1,5 +1,5 @@
 {% extends 'plantilla-prof.html' %}
-{% block title %} Registro Estudiantes {% endblock %}
+{% block title %} Eliminar Estudiantes {% endblock %}
 
 {%  block content %}
 
@@ -12,6 +12,7 @@
                     <div class="col-lg-12">
                         <h1 class="page-header">
                             Eliminar <small> Estudiante</small>
+                            <a id="regresar" href="javascript:history.back()" class="btn btn-primary pull-right"><i class="fa fa-arrow-left" aria-hidden="true"></i> <b>Back</b></a>
                         </h1>
                         <ol class="breadcrumb">
                             <li>
@@ -21,7 +22,7 @@
                     </div>
                 </div>
 
-            <div class="col-sm-12 col-md-12">
+            <div class="col-sm-12 col-md-12 col-lg-12">
              <div class="col-sm-3 col-md-3 pull-left">
             <form class="navbar-form" action="{% url 'buscar_estudiante1' %}" method="get" >
                 <label>Buscar Estudiante: </label>
@@ -43,6 +44,7 @@
 
     <div class="container initial">
 
+    <div class="col-lg-12 col-md-12 col-sm-12">
     {% if error %}
     <div class="alert alert-danger"> {{ error }} </div>
 
@@ -97,6 +99,7 @@
             <a href="#" class="btn btn-lg btn-danger" data-toggle="modal" data-target="#basicModal" data-tooltip><i class="fa fa-fw fa-trash"></i>Eliminar</a>
           </div>
     </form>
+    </div>
     
   </div>
 
