--- a/templates/paginaDocente/eventos-estudiantes.html
+++ b/templates/paginaDocente/eventos-estudiantes.html
@@ -12,7 +12,9 @@
                     <div class="col-lg-12">
                         <h1 class="page-header">
                             Eventos Estudiante<small> {{ user.first_name }} {{ user.last_name }} </small>
+                            <a id="regresar" href="javascript:history.back()" class="btn btn-primary pull-right"><i class="fa fa-arrow-left" aria-hidden="true"></i> <b>Back</b></a>
                         </h1>
+                        
                         <ol class="breadcrumb">
                             <li>
                                 <i class="fa fa-fw fa-table"> </i> Grupos
