--- a/templates/paginaDocente/grupos.html
+++ b/templates/paginaDocente/grupos.html
@@ -12,6 +12,7 @@
                     <div class="col-lg-12">
                         <h1 class="page-header">
                             Grupos <small> Lista</small>
+                            <a id="regresar" href="javascript:history.back()" class="btn btn-primary pull-right"><i class="fa fa-arrow-left" aria-hidden="true"></i> <b>Back</b></a>
                         </h1>
                         <ol class="breadcrumb">
                             <li class="active">
@@ -24,7 +25,7 @@
 
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
-                        <a href="{% url 'agregar-grupos'  %}" class="btn btn-primary">Agregar Nuevo Grupo</a>
+                        <a href="{% url 'agregar-grupos'  %}" class="btn btn-success">Agregar Nuevo Grupo</a>
                     </div>
                     <br><br><br>
 
