--- a/templates/paginaDocente/lista-notas.html
+++ b/templates/paginaDocente/lista-notas.html
@@ -12,6 +12,7 @@
                     <div class="col-lg-12">
                         <h1 class="page-header">
                             Notas Estudiante <small> {{ estudiante.first_name }} {{ estudiante.last_name }}</small>
+                            <a id="regresar" href="javascript:history.back()" class="btn btn-primary pull-right"><i class="fa fa-arrow-left" aria-hidden="true"></i> <b>Back</b></a>
                         </h1>
                         <ol class="breadcrumb">
                             <li>
