--- a/templates/paginaDocente/perfil-profe.html
+++ b/templates/paginaDocente/perfil-profe.html
@@ -25,6 +25,8 @@
 
                 <div class="row">
                   <div class="col-md-12 col-sm-12 col-lg-12">
+
+                    <div class="col-md-8 col-sm-8 col-lg-8">
                     {% if error %}
                     <div class="alert alert-danger"> {{ error }} </div>
 
@@ -132,6 +134,30 @@
                                 </form>
                                 
                             </div>
+
+                  </div>
+
+                  <div class="col-md-4">
+                        <div class="card card-user">
+                            <div class="image">
+                                <img src="../static/img/sidebar-5.jpg" alt="..."/>
+                            </div>
+                            <div class="content">
+                                <div class="author">
+                                    <img class="avatar border-gray" src=""   alt="foto" >
+                                      <h4 class="title">{{ user.first_name }} {{ user.last_name }}<br />
+                                         <small>{{ user.username }}</small>
+                                      </h4>
+                                </div>
+
+                            </div>
+                            <hr>
+                            <div class="text-center">
+                                <button href="{{ user.email }}" class="btn btn-simple"><i class="fa fa-envelope" aria-hidden="true"></i></button>
+
+                            </div>
+                        </div>
+                    </div>
 
 
               </div>
