--- a/templates/paginaEstudiante/perfil-estudiante.html
+++ b/templates/paginaEstudiante/perfil-estudiante.html
@@ -9,47 +9,158 @@
         <li> {{ usuario.id.first_name }} {{ usuario.id.last_name }} </li>
 </ol>
       <!-- Main component for a primary marketing message or call to action -->
-      <div id="wh">
+      <div id="wh" style="padding-bottom: 310px;">
 
-          <form class="navbar-form" action="{% url 'perfil-estudiante' %}" method="post" >   </form>
+        <div class="container-fluid">
 
-                <div class="container initial">
+        <div class="col-md-12 col-sm-12 col-lg-12">
 
-        {% if error %}
-        <div class="alert alert-danger"> {{ error }} </div>
+                    <div class="col-md-8 col-sm-8 col-lg-8">
+                    {% if error %}
+                    <div class="alert alert-danger"> {{ error }} </div>
 
-        {% endif %}
-        <form method="post" action="{% url 'modificar-perfil-est' %}">
-          {% csrf_token %}
-          <div class="container-fluid">
-            <div class="row">
+                    {% endif %}
+                    <form method="post" action="{% url 'modificar-perfil-est' %}">
+                      {% csrf_token %}
+                      <div class="container-fluid">
+                        <div class="row">
+                          <div class="col-md-12"></div>
+                          <div class="col-md-12">
+                            <div class="col-ms-12 form-group">
+                              <div class="col-md-5">
+                                  <div class="form-group">
+                                      <label>Colegio</label>
+                                      <input type="text" class="form-control" disabled placeholder="Company" value="ENSMAG">
+                                  </div>
+                              </div>
+                              <div class="col-md-3">
+                                  <div class="form-group">
+                                      <label>Usuario</label>
+                                      <input type="text" class="form-control" disabled placeholder="Usuario" value="{{ usuario.id.username }}" name="username" >
+                                  </div>
+                              </div>
+                              <div class="col-md-4">
+                                  <div class="form-group">
+                                      <label for="exampleInputEmail1">Email</label>
+                                      <input type="email" class="form-control" placeholder="email" value="{{ usuario.id.email }}" name="email">
+                                  </div>
+                              </div>
+                            </div>
 
-            <div class="col-md-11">
-            <label>Username </label><label class="form-control"> {{ usuario.id.username }} </label>
-            <label>Nombre </label><label class="form-control"> {{ usuario.id.first_name }} </label>
-            <label>Apellido </label><label class="form-control"> {{ usuario.id.last_name }} </label>
-            <label>Correo </label><input  type="email" class="form-control" name="email"  value="{{ usuario.id.email }}" >
-            <label>Documento Identidad </label><input  type="documento" class="form-control" name="documento"  value="{{ usuario.documento }}" >
-            <label>Teléfono </label><input  type="tel" class="form-control" name="tel"  value="{{ usuario.tel }}" >
-            <label>Dirección de Residencia </label><input  type="direccion" class="form-control" name="direccion"  value="{{ usuario.direccion }}" >
-            <label>Fecha de Nacimiento </label><input  type="date" class="form-control" name="nacimiento"  data-date-format="YYYY-MM-DD" value="{{ usuario.fecha_nacimiento }}" >
-                <br />
+                            <div class="col-md-12"></div>
 
+                            <div class="col-ms-12 form-group">
+                              <div class="col-md-6">
+                                  <div class="form-group">
+                                      <label>Nombre</label>
+                                      <input type="text" class="form-control" disabled placeholder="Nombre" value="{{ usuario.id.first_name }}" name="first_name">
+                                  </div>
+                              </div>
+                              <div class="col-md-6">
+                                  <div class="form-group">
+                                      <label>Apellido</label>
+                                      <input type="text" class="form-control" disabled placeholder="Apellido" value="{{ usuario.id.last_name }}" name="last_name">
+                                  </div>
+                              </div>
+                            </div>
 
-                  <div class="col-md-9" style="text-align:right">
-                     <a href="{% url 'modificar-contra-estudiante' %}"> Cambio de contraseña aquí </a>
+                            <div class="col-md-12"></div>
+
+                            <div class="col-md-12 form-group">
+                              <div class="col-md-4">
+                                  <div class="form-group">
+                                      <label>Documento</label>
+                                      <input type = "text" name="documento" class="form-control" value="{{ usuario.documento }}" placeholder="Documento">
+                                  </div>
+                              </div>
+                              <div class="col-md-4">
+                                  <div class="form-group">
+                                      <label>Teléfono</label>
+                                      <input type = "text" name="tel" class="form-control" value="{{ usuario.tel }}" >
+                                  </div>
+                              </div>
+                              <div class="col-md-4">
+                                  <div class="form-group">
+                                      <label>Dirección de Residencia</label>
+                                      <input type = "text" name="direccion" class="form-control" value="{{ usuario.direccion }}" >
+                                  </div>
+                              </div>  
+                            </div>
+                            <div class="col-md-4">
+                                  <div class="form-group">
+                                      <label>Nacimiento</label>
+                                      <input type = "date" name="nacimiento" class="form-control" value="{{ usuario.nacimiento }}" >
+                                  </div>
+                              </div>
+
+                            <div class="col-md-12"></div>
+                            <div class="col-md-12">
+                                <p><button type="submit" class="btn btn-info btn-fill pull-right">Actualizar Datos</button> </p>
+                            </div>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+                {{ paso }}
+
+                <div class="header">
+                                <h4 class="title">Cambiar Contraseña</h4>
+                            </div>
+                            <div class="col-lg-12 col-md-12 col-sm-12">
+                                <form method="post" action="{% url 'modificar-contra-estudiante' %}" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label>Contraseña</label>
+                                                <input type="password" class="form-control" name="password1"  placeholder="Contraseña" value="" >
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label>Confirmar Contraseña</label>
+                                                <input type="password" name='password2' class="form-control"  placeholder="Confirmar Contraseña">
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <button type="submit" id="miboton" class="btn btn-info btn-fill pull-right">Actualizar Contraseña</button>
+                                    <div class="clearfix"></div>
+                                </form>
+                                
+                            </div>
+
                   </div>
 
-                <div class="col-md-3">
-                    <p><button type="submit" class="btn btn-primary btn-lg pull-right">Actualizar Datos</button> </p>
-                </div>
-            </div>
+                  <div class="col-md-4">
+                        <div class="card card-user">
+                            <div class="image">
+                                <img src="../static/img/sidebar-5.jpg" alt="..."/>
+                            </div>
+                            <div class="content">
+                                <div class="author">
+                                    <img class="avatar border-gray" src=""   alt="foto" >
+                                      <h4 class="title">{{ user.first_name }} {{ user.last_name }}<br />
+                                         <small>{{ user.username }}</small>
+                                      </h4>
+                                </div>
 
-          </div>
-        </div>
-      </div>
-    </form>
+                            </div>
+                            <hr>
+                            <div class="text-center">
+                                <button href="{{ usuario.email }}" class="btn btn-simple"><i class="fa fa-envelope" aria-hidden="true"></i></button>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+              </div>
+
+
+
     {{ paso }}
+    </div>
 
 
       </div>
