migrando bd a heroku

--- a/static/css/style-modulo.css
+++ b/static/css/style-modulo.css
@@ -229,8 +229,8 @@ body {
 #wh {
     background: white;
     padding-top: 35px;
-    /*padding-left: 30px;
-    padding-right: 30px;*/
+    padding-left: 25px;
+    padding-right: 25px;
     padding-bottom: 70px;
 }
 
