--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson2-tm2.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson2-tm2.html
@@ -85,7 +85,7 @@
       <h2>LISTEN</h2>
       <h3></h3>
         <hr>
-      <p>Listen and complete the forms in your notebook.</p>
+      <p>Listen and complete the forms.</p>
 
           <audio controls>
           <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK13.mp3" type="audio/mpeg">
@@ -93,45 +93,176 @@
           </audio>
           <br/><br/>
 
-          <div class="col-sm-6 col-md-6">
+          <div class="col-sm-3 col-md-3">
                 <p><b>Student 1</b></p>
-                <p>NAME:</p>
-                <p>SURNAME:</p>
                 <p>CLASS: 8C</p>
-                <p>PHONE NUMBER:</p>
-                <p>EMAIL:</p>
               <br/>
           </div>
-          <div class="col-sm-6 col-md-6">
+          <div class="col-sm-3 col-md-3">
               <p><b>Student 2</b></p>
-              <p>NAME:</p>
-              <p>SURNAME:</p>
-              <p>CLASS:</p>
               <p>PHONE NUMBER: 9542076</p>
-              <p>EMAIL: </p>
               <br/>
           </div>
-          <div class="col-sm-6 col-md-6">
+          <div class="col-sm-3 col-md-3">
                 <p><b>Student 3</b></p>
-                <p>NAME:</p>
                 <p>SURNAME: Paez</p>
-                <p>CLASS:</p>
-                <p>PHONE NUMBER:</p>
-                <p>EMAIL:</p>
               <br/>
           </div>
-          <div class="col-sm-6 col-md-6">
+          <div class="col-sm-3 col-md-3">
                 <p><b>Student 4</b></p>
-                <p>NAME:</p>
-                <p>SURNAME:</p>
-                <p>CLASS:</p>
-                <p>PHONE NUMBER:</p>
                 <p>EMAIL: Jan01520@hotmail.com</p>
                 <br/>
           </div>
+
+          <div id="pregunta-usuario">
+            <div class="col-sm-12 col-md-12"><p><strong>Student 1:</strong> </p></div>
+            {% for row in respuesta %}
+              {% if row.pregunta.id <= 5 %}            
+                <div class="col-sm-4 col-md-4">
+                    {{ row.pregunta.descripcion }}
+                    <input class="form-control" type="text" id="{{ row.id }}" name="{{ row.descripcion }}" value="">
+                </div>
+              {% endif %}
+            {% endfor %}
+            <br>
+            <div class="col-sm-12 col-md-12"><p><strong>Student 2:</strong> </p></div>           
+            {% for row in respuesta %}
+              {% if row.pregunta.id >= 6 and row.pregunta.id <= 10 %} 
+                <div class="col-sm-4 col-md-4">
+                    {{ row.pregunta.descripcion }}
+                    <input class="form-control" type="text" id="{{ row.id }}" name="{{ row.descripcion }}" value="">
+                </div>
+              {% endif %}
+            {% endfor %}
+            <br>
+            <div class="col-sm-12 col-md-12"><p><strong>Student 3:</strong> </p></div>           
+            {% for row in respuesta %}
+              {% if row.pregunta.id >= 11 and row.pregunta.id <= 15 %} 
+                <div class="col-sm-4 col-md-4">
+                    {{ row.pregunta.descripcion }}
+                    <input class="form-control" type="text" id="{{ row.id }}" name="{{ row.descripcion }}" value="">
+                </div>
+              {% endif %}
+            {% endfor %}
+            <br>
+            <div class="col-sm-12 col-md-12"><p><strong>Student 4:</strong> </p></div>           
+            {% for row in respuesta %}
+              {% if row.pregunta.id >= 16 and row.pregunta.id <= 20 %} 
+                <div class="col-sm-4 col-md-4">
+                    {{ row.pregunta.descripcion }}
+                    <input class="form-control" type="text" id="{{ row.id }}" name="{{ row.descripcion }}" value="">
+                </div>
+              {% endif %}
+            {% endfor %}
+          </div>
+
+          <br><br><br><br>
+          <div class="col-sm-12 col-md-12"><hr></div>
+          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          <div id="respuestas-bd">
+              <div id="estudiante_id" hidden="false">{{estudiante.id.id}}</div>
+              {% for row in respuesta %}
+                  <div id="actividad_id" hidden="false">{{ row.pregunta.actividad.id }}</div>
+                  <div id="{{ row.id }}" hidden="false"><li>{{ row.descripcion }}</li></div>            
+              {% endfor %}
+          </div>
+          <br><br><br>
+          <div id="resultado"><strong>Resultado:</strong></div>
+          <button class="btn btn-primary pull-right" id="boton_actividad1">Calificar</button> 
+
       </div>
 
        </div>
     </div><!--div-->
     </div>
+{% endblock %}
+{% block javascript %}
+<script type="text/javascript">
+  $( document ).ready(function() {
+    var array_res_usuario = [];
+    var array_res_correctas = []; 
+    var respuesta_sistema = "";
+    var respuesta_usuario = "";
+          
+        $( "#boton_actividad1" ).click(function() 
+        {            
+                var cantidad_blanco = 0;
+                array_res_usuario = [];
+                array_res_correctas = []; 
+                var buenas = 0;
+                var malas = 0;
+                respuesta_sistema = "";
+                respuesta_usuario = "";
+                var actividad = $("#actividad_id").html();
+                var estudiante = $("#estudiante_id").html();
+
+              $("#respuestas-bd li").each(function()
+              {
+                  var descripcion =$(this).html();
+                  array_res_correctas.push(descripcion);
+                  // alert("descripcion  "+ descripcion);
+              })
+              $("#pregunta-usuario input").each(function()
+              {
+                  var descripcion =$(this).val();
+                   // alert("descripcion usuario  "+ descripcion);
+                   if (descripcion == ""){
+                    cantidad_blanco++;
+                   }
+                   array_res_usuario.push(descripcion);
+              })
+              if(cantidad_blanco > 0){
+                alert("Debe llenar todos los campos");
+                return;
+              }
+
+              calificar(buenas,malas,"resultado",actividad,estudiante)
+              //alert("cantidad de respuestas sistema " + array_res_correctas.length);
+              //alert("cantidad de respuestas usuario " + array_res_usuario.length);
+          });
+
+       function calificar (buenas,malas,name_div,actividad, estudiante){
+             for(var i =0; i < array_res_correctas.length; i++) 
+              {
+                   respuesta_sistema = array_res_correctas[i].toString();
+                   respuesta_usuario = array_res_usuario[i].toString();
+                  //alert("respuesta_sistema-"  + respuesta_sistema + "-respuesta_usuario-" + respuesta_usuario + "-" );
+                  var n = respuesta_sistema.localeCompare(respuesta_usuario);
+                  if(n == 0){
+                    //alert("buena1");
+                    buenas++;
+                  }else{
+                    //alert("mala1");
+                    malas++;
+                  }  
+              }
+              var total = buenas + malas;
+              var porcentaje = (buenas*100)/total;
+              var nota = (porcentaje / 2)/10;
+              var activi = actividad
+              var estu = estudiante
+
+              var n = nota.toFixed(1);
+              $("#" + name_div).html("<strong>Tu resultado es :</strong> " + buenas +"/" + total + " <strong>Tu nota es:</strong> " + n);
+              guardar_actividad(activi,n,buenas,estu)
+        }
+
+      // function guardar_actividad(activi, n, buenas, estu){
+      //         debugger
+      //         var pk = estu;
+      //         var actividad = activi;
+      //         var nota = n;
+      //         var buenas = buenas;
+      //           $.ajax({
+      //                   url: 'note/'+pk+'/activity',
+      //                   data: { "csrfmiddlewaretoken": "{{ csrf_token }}", "nota": nota, "actividad":actividad, "pk": pk , "detalle":buenas},
+      //                   type: 'POST',
+      //                   success: function() {
+      //                                       console.log(pk, actividad, nota)
+      //                 }
+      //           })
+      //           return false;
+      // };
+});
+</script>
 {% endblock %}
