--- a/templates/paginaEstudiante/perfil-estudiante.html
+++ b/templates/paginaEstudiante/perfil-estudiante.html
@@ -9,7 +9,7 @@
         <li> {{ usuario.id.first_name }} {{ usuario.id.last_name }} </li>
 </ol>
       <!-- Main component for a primary marketing message or call to action -->
-      <div id="wh" style="padding-bottom: 310px;">
+      <div id="wh" style="padding-bottom: 310px;padding-left: 0px;padding-right: 0px;">
 
         <div class="container-fluid">
 
