--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson5-tm1.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson5-tm1.html
@@ -52,10 +52,10 @@
 
       <div class="col-sm-12 col-md-12">
         <div class="col-sm-8 col-md-8">
-          <img src="../static/img/modulo1/unity1/Lesson5Theme1.png" alt="No found">
+          <img class="img-responsive" src="../static/img/modulo1/unity1/Lesson5Theme1.png" alt="No found">
         </div>
         <div class="col-sm-4 col-md-4">
-          <img src="../static/img/modulo1/unity1/Lesson5Theme1img2.png" alt="No found">
+          <img class="img-responsive" src="../static/img/modulo1/unity1/Lesson5Theme1img2.png" alt="No found">
         </div>
       </div>
 
@@ -68,8 +68,8 @@
             <source src="../static/audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK24.mp3" type="audio/mpeg">
               Your browser does not support the audio element. (AUDIO 24)
         </audio>
-
-        <img src="../static/img/modulo1/unity1/Lesson5Theme1img3.png" alt="No found">
+        <br>
+        <img class="img-responsive" src="../static/img/modulo1/unity1/Lesson5Theme1img3.png" alt="No found">
 
       </div>
 
@@ -77,23 +77,28 @@
         <p>Complete the sentences about Felipe’s family with a word from the box.</p>
 
         <img src="../static/img/modulo1/unity1/Lesson5Theme1img4.png" alt="No found">
+                <br /><br />        <br />
+        <div id="pregunta-usuario">
+          {% for row in respuesta %}
+          <div class="col-sm-6 col-md-6">
+              <strong>{{ row.pregunta.descripcion }}</strong>
+              <input class="form-control" type="text" id="{{ row.id }}" name="{{ row.descripcion }}" value="">
+          </div>
+          {% endfor %}
+        </div>
+        <div id="respuestas-bd">
+            <div id="estudiante_id" hidden="false">{{estudiante.id.id}}</div>
+            {% for row in respuesta %}
+                <div id="actividad_id" hidden="false">{{ row.pregunta.actividad.id }}</div>
+                <div id="{{ row.id }}" hidden="false"><li>{{ row.descripcion }}</li></div>            
+            {% endfor %}
+        </div>
+        <br><br><br><br><br><br>
+        <hr>
+        <br><br><br><br>
+        <div id="resultado"><strong>Resultado:</strong></div>
+        <button class="btn btn-primary pull-right" id="boton_actividad1">Calificar</button> 
 
-        <div class="col-sm-6 col-md-6">
-          <ul>
-            <li>a. Felipe is Michelle’s ______</li>
-            <li>b. Michelle is Felipe’s ______</li>
-            <li>c. Laura is Felipe’s ______</li>
-            <li>d. Laura is Michelle’s ______</li>
-          </ul>
-        </div>
-         <div class="col-sm-6 col-md-6">
-          <ul>
-            <li>e. Pili is Michelle’s ______</li>
-            <li>f. José is Michelle’s ______</li>
-            <li>g. Michelle is Pili and José’s ______</li>
-            <li>h. Laura is Pili and José’s ______</li>
-          </ul>
-        </div>
 
       </div>
 
@@ -104,4 +109,94 @@
         <br>
 
 </div>
+{% endblock %}
+{% block javascript %}
+<script type="text/javascript">
+  $( document ).ready(function() {
+    var array_res_usuario = [];
+    var array_res_correctas = []; 
+    var respuesta_sistema = "";
+    var respuesta_usuario = "";
+          
+        $( "#boton_actividad1" ).click(function() 
+        {            
+                var cantidad_blanco = 0;
+                array_res_usuario = [];
+                array_res_correctas = []; 
+                var buenas = 0;
+                var malas = 0;
+                respuesta_sistema = "";
+                respuesta_usuario = "";
+                var actividad = $("#actividad_id").html();
+                var estudiante = $("#estudiante_id").html();
+
+              $("#respuestas-bd li").each(function()
+              {
+                  var descripcion =$(this).html();
+                  array_res_correctas.push(descripcion);
+                  // alert("descripcion  "+ descripcion);
+              })
+              $("#pregunta-usuario input").each(function()
+              {
+                  var descripcion =$(this).val();
+                   // alert("descripcion usuario  "+ descripcion);
+                   if (descripcion == ""){
+                    cantidad_blanco++;
+                   }
+                   array_res_usuario.push(descripcion);
+              })
+              if(cantidad_blanco > 0){
+                alert("Debe llenar todos los campos");
+                return;
+              }
+
+              calificar(buenas,malas,"resultado",actividad,estudiante)
+              //alert("cantidad de respuestas sistema " + array_res_correctas.length);
+              //alert("cantidad de respuestas usuario " + array_res_usuario.length);
+          });
+
+       function calificar (buenas,malas,name_div,actividad, estudiante){
+             for(var i =0; i < array_res_correctas.length; i++) 
+              {
+                   respuesta_sistema = array_res_correctas[i].toString();
+                   respuesta_usuario = array_res_usuario[i].toString();
+                  //alert("respuesta_sistema-"  + respuesta_sistema + "-respuesta_usuario-" + respuesta_usuario + "-" );
+                  var n = respuesta_sistema.localeCompare(respuesta_usuario);
+                  if(n == 0){
+                    //alert("buena1");
+                    buenas++;
+                  }else{
+                    //alert("mala1");
+                    malas++;
+                  }  
+              }
+              var total = buenas + malas;
+              var porcentaje = (buenas*100)/total;
+              var nota = (porcentaje / 2)/10;
+              var activi = actividad
+              var estu = estudiante
+
+              var n = nota.toFixed(1);
+              $("#" + name_div).html("<strong>Tu resultado es :</strong> " + buenas +"/" + total + " <strong>Tu nota es:</strong> " + n);
+              guardar_actividad(activi,n,buenas,estu)
+        }
+
+      // function guardar_actividad(activi, n, buenas, estu){
+      //         debugger
+      //         var pk = estu;
+      //         var actividad = activi;
+      //         var nota = n;
+      //         var buenas = buenas;
+      //           $.ajax({
+      //                   url: 'note/'+pk+'/activity',
+      //                   data: { "csrfmiddlewaretoken": "{{ csrf_token }}", "nota": nota, "actividad":actividad, "pk": pk , "detalle":buenas},
+      //                   type: 'POST',
+      //                   success: function() {
+      //                                       console.log(pk, actividad, nota)
+      //                 }
+      //           })
+      //           return false;
+      // };
+});
+</script>
 {% endblock %}
